src/test/deca/context/valid/initialisation_avec_variable_non_initialisee.deca
// Description :
//initialisation d'une variable avec une variable non initialisée
//
// Resultats : 
// 	ok: une valeur non initialisée est mise à 0 par défaut.

{int y;
int x = y;}